--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	-->
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Eddy Adha Saputra</title>
+	<title>Eddy Adha Saputra server</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="vCard & Resume Template" />
 	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cards, portfolio" />
